--- a/templates/breakout.html
+++ b/templates/breakout.html
@@ -1,41 +1,37 @@
 <html>
 <head>
     <style>
+        body { font-family: arial; margin: 20px; }
+        td { padding: 5px; }
+        .bullish { background: green; color: white; }
+        .bearish { background: red; color: white; }
     </style>
-   
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-   <Script>
-
-    function loadBreakouts(){
-        $.ajax({
-        url:"/breakouts",
-        type: "POST",
-        dataType: "json",
-        success: function(data){
-            $(random_decimal)}
-       } );
-    }
-
-   </Script>
 </head>
 <body>
     <h1>Technical Scanner</h1>
-    
+  
+
     <table>
         <tr>
-            <th  colspan="3">Ticker</th>
-            <th  colspan="3">Status</th>
-            <th  colspan="3">ChartPeek</th>
+            <td>Stock</td>
+            <td>Consolidated Price</td>
+            <td>Current Price</td>
+            <td>Percent Change</td>
+            <td>Status</td>
         </tr>
-        {% for key,value in breakoutdict.items() %}
 
+        {% for key, value in breakouts.items() %}
         <tr>
-            <td colspan="3">{{key}}</td>
-            <td colspan="3">{{value['status']}}</td>
-            <td colspan="3"><img src="https://finviz.com/chart.ashx?t={{key}}&ty=c&ta=1&p=d&s=l" /></td>
+            <td>{{key}} </td>
+            <td>{{value['ConsolidatedPrice']}} </td>
+            <td>{{value['CurrentPrice']}} </td>
+            <td>{{value['PercentChange']}} </td>
+            <td>{{value['Status']}} </td>
+       
         </tr>
-    {% endfor %}
-    </table>
+        {% endfor %}
 
+    </table>
 </body>
 </html>
+
