--- a/templates/putgap.html
+++ b/templates/putgap.html
@@ -14,8 +14,8 @@
     <table>
         <tr>
             <td>Stock</td>
-            <td>gap_bottom Price</td>
-            <td>gap_top Price</td>
+            <td>gap_bottom</td>
+            <td>gap_top</td>
             <td>current_price</td>
             <td>dist_from_top</td>
         </tr>
